[gd_scene load_steps=2 format=3 uid="uid://337tryee8q4w"]

[ext_resource type="Script" uid="uid://dordcw6yknm0v" path="res://scenes/screens/crafting_screen.gd" id="1_gyth8"]

[node name="CraftingScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gyth8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_right = 720.0
offset_bottom = 1280.0

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
show_percentage = false

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/ProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ProgressBarLabel" type="Label" parent="VBoxContainer/ProgressBar/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Crafting: Nothing"

[node name="StopCraftingButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
text = "Stop Crafting"

[node name="MaterialsContainer" type="GridContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
